kvx-macros/tests/macro/fail-separator.stderr
error: segments must not contain scope separators
 --> tests/macro/fail-separator.rs:4:36
  |
4 | const SEGMENT: &Segment = segment!("te/st");
  |                                    ^^^^^^^
